; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_InitializeUART.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_InitializeUART.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exi_uart_enabled = common dso_local global i32 0, align 4
@EXI_CHANNEL_0 = common dso_local global i32 0, align 4
@exi_uart_chan = common dso_local global i32 0, align 4
@EXI_DEVICE_1 = common dso_local global i32 0, align 4
@exi_uart_dev = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InitializeUART() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @exi_uart_enabled, align 4
  %3 = add nsw i32 %2, 1510014976
  %4 = icmp eq i32 %3, 90
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @EXI_CHANNEL_0, align 4
  store i32 %7, i32* @exi_uart_chan, align 4
  %8 = load i32, i32* @EXI_DEVICE_1, align 4
  store i32 %8, i32* @exi_uart_dev, align 4
  store i32 -1510014886, i32* @exi_uart_enabled, align 4
  store i32 0, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
